Update Amper version to 0.9.0-dev-3307